apps/gateway/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roost-ingress
  namespace: roost-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: roost-prod-strip-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - placeholder.example.com
      secretName: kernel-panic-tls
  rules:
    - host: placeholder.example.com
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: whale-backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: whale-frontend
                port:
                  number: 80

          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080

          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
